[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemys/fa-18.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HealthBarEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 0, 56.67, -11.05, -1.04, -40.14, -10.19, -40.14, -29.4, -19.69, -58.73, 19.69, -58.73, 39.79, -28.53, 39.79, -8.73, 10.57, 0, 0, 56.67 )

[node name="Enemy3" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathPos" type="Position2D" parent="."]

[node name="HealthBarEnemy" parent="." instance=ExtResource( 3 )]
margin_left = -18.6995
margin_top = -44.9392
margin_right = -18.6995
margin_bottom = -44.9392
rect_scale = Vector2( 0.1, 0.1 )

[node name="Visible" type="VisibilityNotifier2D" parent="."]

[node name="Trigger" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 1 )
[connection signal="death" from="HealthBarEnemy" to="." method="_on_HealthBarEnemy_death"]
[connection signal="screen_exited" from="Visible" to="." method="_on_Visible_screen_exited"]
[connection signal="area_entered" from="Trigger" to="." method="_on_Trigger_area_entered"]
